Bug 127097 - EDITING Deleted paragraph style does not change while editing
Summary: EDITING Deleted paragraph style does not change while editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-08-22 12:45 UTC by Gabor Kelemen (Collabora)
Modified: 2019-08-22 13:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (19.87 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-08-22 12:45 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the original document side by side in Word and Writer after deleting a portion of text (136.67 KB, image/png)
2019-08-22 12:45 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2019-08-22 12:45:01 UTC
Created attachment 153573 [details]
Example file from Word

When multiple paragraphs are partially deleted the style of the first is applied during editing to the next one if it was partially deleted, but not when it is entirely deleted.


Steps to reproduce:
1.	Open attached file, it has several paragraphs with different styles and change tracking enabled
2.	Delete the last few words in the second paragraph, the third paragraph and the first few words of the fourth paragraph in Word and Writer both.
3.	When this is done in Word, the style of the third and fourth paragraphs becomes Heading 1 just like the style of the second
4.	When done in Writer the style of the third paragraph does not change only the fourth paragraphs style becomes Heading 1.

Actual results:
Style of the third paragraph is not modified. This can lead to layout differences and editing problems.

Expected results:
Writer should change the style of the entirely deleted paragraph too to the style of the previous one.

LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 Gabor Kelemen (Collabora) 2019-08-22 12:45:22 UTC
Created attachment 153574 [details]
Screenshot of the original document side by side in Word and Writer after deleting a portion of text
Comment 2 Commit Notification 2019-08-22 13:00:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2f2409fdac98cc3470ad8fa1d45ab84bb50e929c%5E%21

tdf#127097 Change tracking: change style of whole deletion at paragraph join

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.