tdf#127097 Change tracking: change style of whole deletion at paragraph join

in all deleted paragraphs to avoid editing problems later.

This reverts the behaviour of paragraph join changed by
commit 705b728d26b4480ec6b51d9fe1362a0154ea9bf9
"tdf#119571 fix style & numbering at tracked deletion", but
now Undo undoes the (sometimes different) styles of the
deleted paragraphs in the same deletion, instead of losing them.

Change-Id: Ic4641356c28f005efb43bf71b5b23a7bd054fecd
Reviewed-on: https://gerrit.libreoffice.org/76862
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>